# explore-ocr

./: CMakeLists.txt  README.md
llm_demos/: chatgpt_demo.py  chatgpt_demo2.py  chatgpt_test.py
ocr_lmm/: paddleocr_chatgpt.py  paddleocr_chatgpt_conversation.py  tesseract_chatgpt.py  tesseract_chatgpt_conversation.py
paddle-exploration/: CMakeLists.txt  README.md  main.cpp
python/: paddleocr-sample.py  tesseract-sample.py
src/: GetComponentImages.cpp  ResultIterator.cpp  SetRectangle.cpp
tesseract-exploration/: README.md  main.cpp
